--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -1,32 +1,32 @@
-app.title=Подсчет калорий
-app.footer=Приложение стажировки <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a>
-app.login=Зайти как
+app.title=РџРѕРґСЃС‡РµС‚ РєР°Р»РѕСЂРёР№
+app.footer=РџСЂРёР»РѕР¶РµРЅРёРµ СЃС‚Р°Р¶РёСЂРѕРІРєРё <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a>
+app.login=Р—Р°Р№С‚Рё РєР°Рє
 
-user.title=Пользователи
-user.edit=Редактировать пользователя
-user.add=Добавить пользователя
-user.name=Имя
-user.email=Почта
-user.roles=Роли
-user.active=Активный
-user.registered=Зарегистрирован
-user.password=Пароль
+user.title=РџРѕР»СЊР·РѕРІР°С‚РµР»Рё
+user.edit=Р РµРґР°РєС‚РёСЂРѕРІР°С‚СЊ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ
+user.add=Р”РѕР±Р°РІРёС‚СЊ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ
+user.name=РРјСЏ
+user.email=РџРѕС‡С‚Р°
+user.roles=Р РѕР»Рё
+user.active=РђРєС‚РёРІРЅС‹Р№
+user.registered=Р—Р°СЂРµРіРёСЃС‚СЂРёСЂРѕРІР°РЅ
+user.password=РџР°СЂРѕР»СЊ
 
-meal.title=Моя еда
-meal.edit=Редактировать еду
-meal.add=Добавить еду
-meal.filter=Отфильтровать
-meal.startDate=От даты (включая)
-meal.endDate=До даты (включая)
-meal.startTime=От времени (включая)
-meal.endTime=До времени (исключая)
-meal.description=Описание
-meal.dateTime=Дата/Время
-meal.calories=Калории
+meal.title=РњРѕСЏ РµРґР°
+meal.edit=Р РµРґР°РєС‚РёСЂРѕРІР°С‚СЊ РµРґСѓ
+meal.add=Р”РѕР±Р°РІРёС‚СЊ РµРґСѓ
+meal.filter=РћС‚С„РёР»СЊС‚СЂРѕРІР°С‚СЊ
+meal.startDate=РћС‚ РґР°С‚С‹ (РІРєР»СЋС‡Р°СЏ)
+meal.endDate=Р”Рѕ РґР°С‚С‹ (РІРєР»СЋС‡Р°СЏ)
+meal.startTime=РћС‚ РІСЂРµРјРµРЅРё (РІРєР»СЋС‡Р°СЏ)
+meal.endTime=Р”Рѕ РІСЂРµРјРµРЅРё (РёСЃРєР»СЋС‡Р°СЏ)
+meal.description=РћРїРёСЃР°РЅРёРµ
+meal.dateTime=Р”Р°С‚Р°/Р’СЂРµРјСЏ
+meal.calories=РљР°Р»РѕСЂРёРё
 
-common.add=Добавить
-common.select=Выбрать
-common.delete=Удалить
-common.update=Обновить
-common.save=Сохранить
-common.cancel=Отменить
+common.add=Р”РѕР±Р°РІРёС‚СЊ
+common.select=Р’С‹Р±СЂР°С‚СЊ
+common.delete=РЈРґР°Р»РёС‚СЊ
+common.update=РћР±РЅРѕРІРёС‚СЊ
+common.save=РЎРѕС…СЂР°РЅРёС‚СЊ
+common.cancel=РћС‚РјРµРЅРёС‚СЊ
