HW09 datatables ajax colored and create

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -1,41 +1,41 @@
-app.title=Подсчет калорий
-app.stackTitle=Стек технологий:
-app.description=<a href="https://github.com/JavaOPs/topjava">Java Enterprise проект</a> с регистрацией/авторизацией и правами доступа на основе ролей (USER, ADMIN). \
-Администратор может создавать/редактировать/удалять пользователей, а пользователи - управлять своим профилем и данными (едой) через UI (по AJAX) и по REST интерфейсу с базовой авторизацией. \
-Возможна фильтрация еды по датам и времени. Цвет записи таблицы еды зависит от того, превышает ли сумма калорий за день норму (редактируемый параметр в профиле пользователя). \
-Весь REST интерфейс покрывается JUnit тестами, используя Spring MVC Test и Spring Security Test.
-app.footer=Приложение стажировки <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a>
-app.login=Зайти как
+app.title=РџРѕРґСЃС‡РµС‚ РєР°Р»РѕСЂРёР№
+app.stackTitle=РЎС‚РµРє С‚РµС…РЅРѕР»РѕРіРёР№:
+app.description=<a href="https://github.com/JavaOPs/topjava">Java Enterprise РїСЂРѕРµРєС‚</a> СЃ СЂРµРіРёСЃС‚СЂР°С†РёРµР№/Р°РІС‚РѕСЂРёР·Р°С†РёРµР№ Рё РїСЂР°РІР°РјРё РґРѕСЃС‚СѓРїР° РЅР° РѕСЃРЅРѕРІРµ СЂРѕР»РµР№ (USER, ADMIN). \
+РђРґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂ РјРѕР¶РµС‚ СЃРѕР·РґР°РІР°С‚СЊ/СЂРµРґР°РєС‚РёСЂРѕРІР°С‚СЊ/СѓРґР°Р»СЏС‚СЊ РїРѕР»СЊР·РѕРІР°С‚РµР»РµР№, Р° РїРѕР»СЊР·РѕРІР°С‚РµР»Рё - СѓРїСЂР°РІР»СЏС‚СЊ СЃРІРѕРёРј РїСЂРѕС„РёР»РµРј Рё РґР°РЅРЅС‹РјРё (РµРґРѕР№) С‡РµСЂРµР· UI (РїРѕ AJAX) Рё РїРѕ REST РёРЅС‚РµСЂС„РµР№СЃСѓ СЃ Р±Р°Р·РѕРІРѕР№ Р°РІС‚РѕСЂРёР·Р°С†РёРµР№. \
+Р’РѕР·РјРѕР¶РЅР° С„РёР»СЊС‚СЂР°С†РёСЏ РµРґС‹ РїРѕ РґР°С‚Р°Рј Рё РІСЂРµРјРµРЅРё. Р¦РІРµС‚ Р·Р°РїРёСЃРё С‚Р°Р±Р»РёС†С‹ РµРґС‹ Р·Р°РІРёСЃРёС‚ РѕС‚ С‚РѕРіРѕ, РїСЂРµРІС‹С€Р°РµС‚ Р»Рё СЃСѓРјРјР° РєР°Р»РѕСЂРёР№ Р·Р° РґРµРЅСЊ РЅРѕСЂРјСѓ (СЂРµРґР°РєС‚РёСЂСѓРµРјС‹Р№ РїР°СЂР°РјРµС‚СЂ РІ РїСЂРѕС„РёР»Рµ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ). \
+Р’РµСЃСЊ REST РёРЅС‚РµСЂС„РµР№СЃ РїРѕРєСЂС‹РІР°РµС‚СЃСЏ JUnit С‚РµСЃС‚Р°РјРё, РёСЃРїРѕР»СЊР·СѓСЏ Spring MVC Test Рё Spring Security Test.
+app.footer=РџСЂРёР»РѕР¶РµРЅРёРµ СЃС‚Р°Р¶РёСЂРѕРІРєРё <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a>
+app.login=Р—Р°Р№С‚Рё РєР°Рє
 
-user.title=Пользователи
-user.edit=Редактировать пользователя
-user.add=Добавить пользователя
-user.name=Имя
-user.email=Почта
-user.roles=Роли
-user.active=Активный
-user.registered=Зарегистрирован
-user.password=Пароль
+user.title=РџРѕР»СЊР·РѕРІР°С‚РµР»Рё
+user.edit=Р РµРґР°РєС‚РёСЂРѕРІР°С‚СЊ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ
+user.add=Р”РѕР±Р°РІРёС‚СЊ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ
+user.name=РРјСЏ
+user.email=РџРѕС‡С‚Р°
+user.roles=Р РѕР»Рё
+user.active=РђРєС‚РёРІРЅС‹Р№
+user.registered=Р—Р°СЂРµРіРёСЃС‚СЂРёСЂРѕРІР°РЅ
+user.password=РџР°СЂРѕР»СЊ
 
-meal.title=Моя еда
-meal.edit=Редактировать еду
-meal.add=Добавить еду
-meal.filter=Отфильтровать
-meal.startDate=От даты (включая)
-meal.endDate=До даты (включая)
-meal.startTime=От времени (включая)
-meal.endTime=До времени (исключая)
-meal.description=Описание
-meal.dateTime=Дата/Время
-meal.calories=Калории
+meal.title=РњРѕСЏ РµРґР°
+meal.edit=Р РµРґР°РєС‚РёСЂРѕРІР°С‚СЊ РµРґСѓ
+meal.add=Р”РѕР±Р°РІРёС‚СЊ РµРґСѓ
+meal.filter=РћС‚С„РёР»СЊС‚СЂРѕРІР°С‚СЊ
+meal.startDate=РћС‚ РґР°С‚С‹ (РІРєР»СЋС‡Р°СЏ)
+meal.endDate=Р”Рѕ РґР°С‚С‹ (РІРєР»СЋС‡Р°СЏ)
+meal.startTime=РћС‚ РІСЂРµРјРµРЅРё (РІРєР»СЋС‡Р°СЏ)
+meal.endTime=Р”Рѕ РІСЂРµРјРµРЅРё (РёСЃРєР»СЋС‡Р°СЏ)
+meal.description=РћРїРёСЃР°РЅРёРµ
+meal.dateTime=Р”Р°С‚Р°/Р’СЂРµРјСЏ
+meal.calories=РљР°Р»РѕСЂРёРё
 
-common.add=Добавить
-common.select=Выбрать
-common.deleted=Запись удалена
-common.saved=Запись сохранена
-common.enabled=Запись активирована
-common.disabled=Запись деактивирована
-common.errorStatus=Статус ошибки
-common.confirm=Вы уверены?
-common.save=Сохранить
-common.cancel=Отменить
+common.add=Р”РѕР±Р°РІРёС‚СЊ
+common.select=Р’С‹Р±СЂР°С‚СЊ
+common.deleted=Р—Р°РїРёСЃСЊ СѓРґР°Р»РµРЅР°
+common.saved=Р—Р°РїРёСЃСЊ СЃРѕС…СЂР°РЅРµРЅР°
+common.enabled=Р—Р°РїРёСЃСЊ Р°РєС‚РёРІРёСЂРѕРІР°РЅР°
+common.disabled=Р—Р°РїРёСЃСЊ РґРµР°РєС‚РёРІРёСЂРѕРІР°РЅР°
+common.errorStatus=РЎС‚Р°С‚СѓСЃ РѕС€РёР±РєРё
+common.confirm=Р’С‹ СѓРІРµСЂРµРЅС‹?
+common.save=РЎРѕС…СЂР°РЅРёС‚СЊ
+common.cancel=РћС‚РјРµРЅРёС‚СЊ
